--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,9 +6,9 @@ on:
   pull_request:
     branches: [ master, main ]
   workflow_dispatch:
-  schedule:
+  #schedule:
     # Run tests daily at 9 AM UTC
-    - cron: '0 9 * * *'
+  #  - cron: '0 9 * * *'
 
 jobs:
   test:
