--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   "license": "MIT",
   "dependencies": {
     "@anthropic-ai/sdk": "^0.27.0",
-    "@playwright/test": "^1.40.0",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "openai": "^6.22.0",
@@ -29,6 +28,8 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@playwright/experimental-ct-react": "^1.58.2",
+    "@playwright/test": "^1.58.2",
     "eslint": "^8.55.0",
     "prettier": "^3.1.0"
   }
