--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@playwright/experimental-ct-react": "^1.58.2",
     "@playwright/test": "^1.58.2",
     "eslint": "^8.55.0",
+    "pptxgenjs": "^4.0.1",
     "prettier": "^3.1.0"
   }
 }
