Fix build timeout - remove duplicate install commands

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,7 +2,7 @@
 nixPkgs = ['nodejs']
 
 [phases.install]
-cmds = ['npm install', 'cd server && npm install']
+cmds = ['npm install --production=false', 'cd server && npm install']
 
 [start]
 cmd = 'cd server && npm start'
